--- a/site/index.html
+++ b/site/index.html
@@ -1,117 +1,51 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"> 
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"> 
 <head> 
-<title>Kirk Heatwole, Vedauwoo, WY</title> 
- 
-<meta name="keywords" content="Vermont, Colorado, Wyoming, Utah, New England, Outdoor photography, Rock Climbing, Trad CLimbing, Sport Climbing, Bouldering, Rock CLimbing Photography, Adventure Photography, Ice Climbing, Mixed Climbing, Backcountry Skiing. "> 
- 
-<meta name="description" content="Colorado-based adventure and action sport photography."> 
- 
-<meta name="verify-v1" content="JRQu6rRPALfGHKo/yIbvqVIMGSBMdGbZQcm5DG1vSts=" /> 
- 
- 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" /> 
-		<script type="text/javascript" src="js/prototype.js"></script> 
-		<script type="text/javascript" src="js/scriptaculous.js?load=effects"></script> 
-		<script type="text/javascript" src="js/lightbox.js"></script> 
-		<link rel="stylesheet" href="/css/lightbox.css" type="text/css" media="screen"></link> 
-		<link href="/css/dave_vuono.css" rel="stylesheet" type="text/css"></link> 		<style type="text/css" title="currentStyle" media="screen"></style> 
- 
+	<meta name="keywords" content="Vermont, Colorado, Wyoming, Utah, New England, Outdoor photography, Rock Climbing, Trad CLimbing, Sport Climbing, Bouldering, Rock CLimbing Photography, Adventure Photography, Ice Climbing, Mixed Climbing, Backcountry Skiing. "> 
+	<meta name="description" content="Colorado-based adventure and action sport photography.">
+	<meta name="title" content="Dave Vuono Photography" />
+	<!-- <meta name="verify-v1" content="JRQu6rRPALfGHKo/yIbvqVIMGSBMdGbZQcm5DG1vSts=" />  --> 
+ 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" /> 
+		
+	<!--<script type="text/javascript" src="js/prototype.js"></script>-->
+	<!--<script type="text/javascript" src="js/scriptaculous.js?load=effects"></script>-->
+	<!--<script type="text/javascript" src="js/lightbox.js"></script> -->
+
+	<!-- <link rel="stylesheet" href="/css/lightbox.css" type="text/css" media="screen"></link>  -->
+	<link href="css/site.css" rel="stylesheet" type="text/css"></link> 		
 </head> 
- 
 <body> 
- 
- 
-<div id="wrapper"> 
- 
-	<div id="header"> 
- 
- 
- 
-		<div id="header_menu">  
-			<a href="/bio.html"><b>Bio</b></a> 
-			<a href="/recent.html"><b>Publications</b></a> 
-			<a href="/links.html"><b>Links</b></a> 
-			<a href="/products.html"><b>Products</b></a> 
-		</div> 
- 
- 
-	</div> 
- 
- 
- 
- 
-<div id="content"> 
- 
- 
- 
-	<div id="sidebar"> 
- 
-		<h3><a href="/index.html">Home</a></h3> 
-		<ul id="side"> 
-		<li><a href="/travel.html">Travel</a></li> 
-		<li><a href="/rock.html">Rock</a></li> 
-		<li><a href="/ice.html">Ice</a></li> 
-		<li><a href="/scenic.html">Scenic</a></li>  
-		</ul> 		
-							<br class="spacer" /> 
-							<br class="spacer" /> 
-							<br class="spacer" /> 
-							<br class="spacer" /> 
-							<br class="spacer" /> 
-							<br class="spacer" /> 
-							<br class="spacer" /> 
-							
-		<h3><a href="mailto:info@davevuono.com?subject=website inquiry." class="off" style="width:75px;">Contact</a></h3> 
- 
-			<div style="width:140px; height:75px; padding:14px 0 8px 0; border-top: 1px solid #000000;  text-align:center "> 
- 
-				<p> <FONT COLOR=black> Dave Vuono Photography <br> 
-				Golden, CO<br> 
-				<p> 
-				203-536-8529<br> 
-				</p> 
- 
- 
- 
-</div> 
- 
- 
-</div> 
- 
- 
- 
-			<div id="mainIndex"> 
- 
-		
-		<img src="/dave_vuono_photography/travel/north_america/kirk-voo-main.jpg" width=752 height=458 FRAMEBORDER=0></img> 
-		
- 
-</div> <br class="spacer" /> 
-<div> 
- 
-<p align="center"> <FONT FACE=arial COLOR=white> This site dedicated to the spirit, passion, and lifestyle of climbing.  Please take a look around and enjoy my work.  Inquiries to my services are welcome as I also shoot portraits, events, and weddings. <br>
-	
-			</div> 
- 
-<div id="footer"> 
- 
-Copyright &copy 2014 <a href="mailto:info@davevuono.com?subject=website inquiry">Dave Vuono</a>  
-</p> 
- 
-</div> 
- 
- 
- 
-</div> 
- 
-</div> 
- 
-<script src="http://www.google-analytics.com/urchin.js" type="text/javascript"> 
-</script> 
-<script type="text/javascript"> 
-_uacct = "UA-3196105-1";
-urchinTracker();
-</script> 
- 
+	<div class="fixed-container">
+		<div class="header">
+			<span class="header-title" style="float: left">Dave Vuono Photography</span>
+			<ul id="nav-menu">
+				<li>
+					<a href="#">Photography</a>
+				</li>
+				<li>
+					<a href="#">Motion</a>
+				</li>
+				<li>
+					<a href="#">Services</a>
+				</li>
+				<li>
+					<a href="#">Links</a>
+				</li>
+				<li>
+					<a href="#">Products</a>
+				</li>
+				<li>
+					<a href="#">Info</a>
+				</li>
+			</ul>
+			<div style="clear: both;"></div>
+		</div>
+		<div class="center-content">
+			
+		</div>
+		<div class="footer">
+			footer
+		</div>
+	</div>
 </body> 
 </html>
