--- a/site/index.html
+++ b/site/index.html
@@ -4,25 +4,12 @@
 	<meta name="keywords" content="Vermont, Colorado, Wyoming, Utah, New England, Outdoor photography, Rock Climbing, Trad CLimbing, Sport Climbing, Bouldering, Rock CLimbing Photography, Adventure Photography, Ice Climbing, Mixed Climbing, Backcountry Skiing. "> 
 	<meta name="description" content="Colorado-based adventure and action sport photography.">
 	<meta name="title" content="Dave Vuono Photography" />
+	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" /> 
 	<!-- <meta name="verify-v1" content="JRQu6rRPALfGHKo/yIbvqVIMGSBMdGbZQcm5DG1vSts=" />  --> 
- 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" /> 
-		
-	<!--<script type="text/javascript" src="js/prototype.js"></script>-->
-	<!--<script type="text/javascript" src="js/scriptaculous.js?load=effects"></script>-->
-	<!--<script type="text/javascript" src="js/lightbox.js"></script> -->
-	
-
+ 	
+	<!-- Styles -->
 	<!-- <link rel="stylesheet" href="/css/lightbox.css" type="text/css" media="screen"></link>  -->
 	<link href="css/site.css" rel="stylesheet" type="text/css"></link> 		
-
-	<script src="//code.jquery.com/jquery-1.10.2.js"></script>
-    <script src="//code.jquery.com/ui/1.11.1/jquery-ui.js"></script>
-    <script>
-    $(function() {
-    	debugger;
-    	$("#nav-menu").tabs();
-  	});
-  	</script>
 </head> 
 <body> 
 	<div id="content" class="fixed-container">
@@ -62,5 +49,17 @@
 			footer
 		</div>
 	</div>
+	
+	<!-- scripts are here for best practice -->
+	<!--<script type="text/javascript" src="js/prototype.js"></script>-->
+	<!--<script type="text/javascript" src="js/scriptaculous.js?load=effects"></script>-->
+	<!--<script type="text/javascript" src="js/lightbox.js"></script> -->
+	<script src="//code.jquery.com/jquery-1.10.2.js"></script>
+    <script src="//code.jquery.com/ui/1.11.1/jquery-ui.js"></script>
+    <script>
+    $(function() {
+    	$("#content").tabs();
+  	});
+  	</script>
 </body> 
 </html>
