--- a/site/index.html
+++ b/site/index.html
@@ -46,7 +46,12 @@
 			<div id="tab-info">info</div>
 		</div>
 		<div class="footer">
-			footer
+			<span style="float:right;">
+				Copyright &copy; 2014   
+			</span> 
+			<span style="float:left;">
+				Dave Vuono Photography | Golden, CO | 203-536-8529 | <a href="mailto:info@davevuono.com?subject=website inquiry">email</a>
+			</span>
 		</div>
 	</div>
 	
