--- a/site/index.html
+++ b/site/index.html
@@ -16,6 +16,9 @@
 		<div class="header">
 			<span class="header-title" style="float: left">Dave Vuono Photography</span>
 			<ul id="nav-menu">
+				<li style="display:none;">
+					<a href="#tab-gallery">Gallery</a>
+				</li>
 				<li>
 					<a href="#tab-photography">Photography</a>
 				</li>
@@ -37,17 +40,23 @@
 			</ul>
 			<div style="clear: both;"></div>
 		</div>
-		<div class="center-content">
-			<div id="tab-photography">photography</div>
-			<div id="tab-motion">motion</div>
-			<div id="tab-services">services</div>
-			<div id="tab-links">links</div>
-			<div id="tab-products">links</div>
-			<div id="tab-info">info</div>
+		<div class="center-content-wrapper">
+			<img id="content-gallery-image" />
+			<div id="tab-content-wrapper">
+				<div id="tab-gallery">
+					<!-- intentionally blank -->
+				</div>
+				<div id="tab-photography">photography</div>
+				<div id="tab-motion">motion</div>
+				<div id="tab-services">services</div>
+				<div id="tab-links">links</div>
+				<div id="tab-products">links</div>
+				<div id="tab-info">info</div>
+			</div>
 		</div>
 		<div class="footer">
-			<span style="float:right;">
-				Copyright &copy; 2014   
+			<span id="copyright-notice" style="float:right;">
+				copyright &copy; 2014   
 			</span> 
 			<span style="float:left;">
 				Dave Vuono Photography | Golden, CO | 203-536-8529 | <a href="mailto:info@davevuono.com?subject=website inquiry">email</a>
@@ -59,12 +68,8 @@
 	<!--<script type="text/javascript" src="js/prototype.js"></script>-->
 	<!--<script type="text/javascript" src="js/scriptaculous.js?load=effects"></script>-->
 	<!--<script type="text/javascript" src="js/lightbox.js"></script> -->
-	<script src="//code.jquery.com/jquery-1.10.2.js"></script>
-    <script src="//code.jquery.com/ui/1.11.1/jquery-ui.js"></script>
-    <script>
-    $(function() {
-    	$("#content").tabs();
-  	});
-  	</script>
+	<script src="//code.jquery.com/jquery-1.10.2.js" type="text/javascript"></script>
+    <script src="//code.jquery.com/ui/1.11.1/jquery-ui.js" type="text/javascript"></script>
+    <script src="js/site.js" type="text/javascript"></script>
 </body> 
 </html>
