--- a/site/index.html
+++ b/site/index.html
@@ -14,7 +14,9 @@
 <body> 
 	<div id="content" class="fixed-container">
 		<div class="header">
-			<span class="header-title" style="float: left">Dave Vuono Photography</span>
+			<a class="header-title" href=".">
+				<span>Dave Vuono Photography</span>
+			</a>
 			<ul id="nav-menu">
 				<li style="display:none;">
 					<a href="#tab-gallery">Gallery</a>
@@ -43,15 +45,67 @@
 		<div class="center-content-wrapper">
 			<img id="content-gallery-image" />
 			<div id="tab-content-wrapper">
-				<div id="tab-gallery">
+				<div id="tab-gallery" style="height: 0px; width: 0px; padding: 0;">
 					<!-- intentionally blank -->
 				</div>
-				<div id="tab-photography">photography</div>
-				<div id="tab-motion">motion</div>
-				<div id="tab-services">services</div>
-				<div id="tab-links">links</div>
-				<div id="tab-products">links</div>
-				<div id="tab-info">info</div>
+				<div id="tab-photography">
+					<img class="tab-background" src="http://upload.wikimedia.org/wikipedia/commons/9/93/Astrophyton_muriatum_-_Basket_star.jpg" />
+					<div class="tab-content-left">
+						<h3>Photography</h3> 
+						<hr />
+						<p>Stuff about photography</p>
+					</div>
+				</div>
+				<div id="tab-motion">
+					<img class="tab-background" src="http://cdni.wired.co.uk/1920x1280/s_v/sea-slug.jpg" />
+					<div class="tab-content-right">
+						<h3>Motion</h3>
+						<hr />
+						<p>
+							Visit <a href="http://vimeo.com/davevuono" target="_blank">vimeo</a> to view videos.
+						</p>
+					</div>
+				</div>
+				<div id="tab-services">
+					<div class="tab-content-left">
+						<h3>Services</h3>
+						<hr />
+						<p>Stuff about services</p>
+					</div>
+				</div>
+				<div id="tab-links">
+					<div class="tab-content-right">
+						<h3>Links</h3>
+						<hr />
+						<p>Los linkos</p>
+					</div>
+				</div>
+				<div id="tab-products">
+					<div class="tab-content-left">
+						<h3>Products</h3>
+						<hr />
+						<p>Products?</p>
+					</div>
+				</div>
+				<div id="tab-info">
+					<img class="tab-background" src="http://dive.nl/files/images/Dahab%20(7).2560*1600.jpg" />
+					<div class="tab-content-right" style="width: 900px;">
+						<h3>Info</h3>
+						<hr />
+						<p class="p3">Life is such a progression. I'm no longer a full-time photographer but enjoy photography as a reprieve from my PhD program at the Colorado School of Mines in Golden, CO. I currently study community ecology and the microorganisms involved in wastewater treatment. My research aims to understand engineered treatment systems from the theoretical ecology and phylogenetic perspectives. I am specifically interested in disturbances to treatment plants and the recovery of microbial diversity and ecosystem function. My research has implications for sustainable and more effective water and nutrient recovery in urban settings by valuing wastewater as a resource, rather than a liability. Nonetheless, I find photography is an excellent way to extend my creativity beyond the scientific method. I'm also interested in video and cinematography as a natural progression from photography and using it as a vehicle to take esoteric scientific research to reach larger audiences.<span class="Apple-converted-space"> </span></p>
+						<p class="p3">Aside from my research, I'm passionate about the outdoors. I love adventure and am inspired by first ascents, champagne powder, and the high of alpine trail running. I appreciate and value having "real" relationships with people. I started climbing 13 years ago and have never looked back. Below are some stories about me that tell how I got into photography. I hope you enjoy them.<span class="Apple-converted-space"> </span></p>
+						<p class="p3">Early on, a friend gave a slideshow about rock climbing in Kalymnos, Greece. His images, his stories, and his passion for rock climbing have stuck with me ever since. Every year that followed, I would travel some place new to rock climb and bring back a story to tell. That's how I began taking photographs. In college I took a black and white photography course to learn the basics, and have since invested in the latest equipment, but beyond that I scrounged up any info I could to advance my techniques.</p>
+						<p class="p3">I feel it's very important to remember your roots, whether it be climbing, photography, or simply life, to respect others' work, to not <i>sell out</i>, and to work hard out of passion. As much as I would love to be a professional, full time photographer, I don't see it as my path. This is for much of the same reason why I would not become a professional climbing guide. I climb and take photos because it's fun. Turning it into "work", I think, can make it loose it's spontaneity, appreciation, and improvisation. I also don't like the "cut throat" attitude that is a result of photographers competing for the same shot. I get satisfaction from sharing my images with others and hope to inspire some people as well.</p>
+						<p class="p3">Taking a look below, I want to try and convey my thoughts of each image and how it inspires me. My friend Erik shot the first image while we were traveling in Tasmania. On that particular day he was sick and was not able to climb. In order to get this amazing shot he had to scramble up of series of ledges, getting totally sketched out from loose rock and dirt, but persevered nonetheless. I hardly have any photos of me, but the fact that he busted his ass to get the angle is what inspires me. On every photo shoot, I'm reminded of that day.</p>
+						<p class="p3">The next photo, although not as dramatic as the last, represents how important friendship and relationships have been to me throughout my climbing and life experiences. It makes me laugh every time I see this photo of Rich, John, and Erik and I (left to right) because I'm reminded of the great time spent at that campground in the Grampians, Australia. Especially of the countless nights from bush tail possum assaults on our food bins.</p>
+						<p class="p3">I believe that life is all about adventure. Maybe that is why climbing inanimate objects such as Tasmania's Totem Pole are experiences that we'll never forget. I can still taste the salt in the air and feel the exposure from that route.</p>
+						<p class="p3">Finally, I was a bit reluctant to include this photo but there is a reason and a story behind every photo right? Well, on that day I was especially inspired. The person who inspired me to do the FNA (first nude ascent) of this route has probably had the most impact on my life. Perhaps FNA's are just another way to have fun and be creative (or maybe they're completely inappropriate)?</p>
+						<p class="p3">I hope you enjoy my website and please, if you have any feedback, I'd love to hear your constructive criticism.</p>
+						<p class="p3">Dave Vuono <br>
+						Golden, CO <br>
+						July 2013</p>
+					</div>
+				</div>
 			</div>
 		</div>
 		<div class="footer">
