products and motion videos added

--- a/site/index.html
+++ b/site/index.html
@@ -58,12 +58,14 @@
 				</div>
 				<div id="tab-motion">
 					<img class="tab-background" src="http://cdni.wired.co.uk/1920x1280/s_v/sea-slug.jpg" />
-					<div class="tab-content-right">
+					<div class="tab-content-right" style="width: 765px;">
 						<h3>Motion</h3>
 						<hr />
-						<p>
+						<!-- <p>
 							Visit <a href="http://vimeo.com/davevuono" target="_blank">vimeo</a> to view videos.
-						</p>
+						</p> -->
+						<iframe src="//player.vimeo.com/video/107614816" width="750" height="422" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe> <p><a href="http://vimeo.com/107614816">New England Video Essay part 1</a> from <a href="http://vimeo.com/davevuono">Dave Vuono</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
+						<iframe src="//player.vimeo.com/video/107415955" width="750" height="422" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe> <p><a href="http://vimeo.com/107415955">New England Video Essay part 2</a> from <a href="http://vimeo.com/davevuono">Dave Vuono</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
 					</div>
 				</div>
 				<div id="tab-services">
@@ -77,15 +79,49 @@
 					<div class="tab-content-right">
 						<h3>Links</h3>
 						<hr />
-						<p>Los linkos</p>
+						<p>
+							<a href="http://www.cragvt.org">CRAG VT, Climbing Resource Access Group</a>
+						</p>
+						<p class="inset">
+							Saving the day for Vermont climbers!
+						</P>
+						<P>
+							<a href="http://www.petracliffs.com">Petra Cliffs Climbing Center</a>
+						</p>
+						<p class="inset">
+							Thank god we have a place to train in the winter!  The hub of Vermont's Climbing community.
+						</p>
+						<p>
+							<a href="http://www.katyshandjam.com/index.html">Katy's Hand Jam</a>
+						</p>
+						<p class="inset">
+							Best climbing healing salve on Earth!
+						</p>
+						<p>
+							<a href="http://www.emaginestonemasonry.com/Home_Page.html">Emagine Stone Masonry</a>
+						</p>
+						<p class="inset">
+							Josh Stevenson, owner of Emagine Stone Masonry, can provide you with the best stonework money can buy. Check out his work.
+						</p>
+						<p>
+							<a href="http://www.gearx.com">Outdoor Gear Exchange</a>
+						</p>
+						<p class="inset">
+							Locally owned and supplying the gear and equipment that Vermont climbers need to get the job done right.	
+						</p>
 					</div>
 				</div>
 				<div id="tab-products">
 					<div class="tab-content-left">
 						<h3>Products</h3>
 						<hr />
-						<p>Products?</p>
-					</div>
+						<p>
+							Check out my T-Shirts!  They come in multiple styles and sizes but please send your ideas for new designs. I'm an aspiring graphic designer but I sure could use some help!
+						</p>
+			 			<embed wmode="transparent" src="http://www.zazzle.com/assets/swf/zp/zp.swf?cn=238069266515809277&st=date_created&tl=My+Zazzle+Panel&skn=default&ch=dvuono" FlashVars="feedId=0&path=http://www.zazzle.com/assets/swf/zp/skins" width="450" height="300" TYPE="application/x-shockwave-flash"></embed>
+			 			<br/>
+			 			<a href="http://www.zazzle.com/">buy unique gifts</a> at <a href="http://www.zazzle.com/">Zazzle</a>
+			 		</div>
 				</div>
 				<div id="tab-info">
 					<img class="tab-background" src="http://dive.nl/files/images/Dahab%20(7).2560*1600.jpg" />
