--- a/site/index.html
+++ b/site/index.html
@@ -64,8 +64,14 @@
 						<!-- <p>
 							Visit <a href="http://vimeo.com/davevuono" target="_blank">vimeo</a> to view videos.
 						</p> -->
-						<iframe src="//player.vimeo.com/video/107614816" width="750" height="422" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe> <p><a href="http://vimeo.com/107614816">New England Video Essay part 1</a> from <a href="http://vimeo.com/davevuono">Dave Vuono</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
-						<iframe src="//player.vimeo.com/video/107415955" width="750" height="422" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe> <p><a href="http://vimeo.com/107415955">New England Video Essay part 2</a> from <a href="http://vimeo.com/davevuono">Dave Vuono</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
+						<iframe src="//player.vimeo.com/video/107614816" width="750" height="422" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+						<!-- <p>
+							<a href="http://vimeo.com/107614816">New England Video Essay part 1</a> from <a href="http://vimeo.com/davevuono">Dave Vuono</a> on <a href="https://vimeo.com">Vimeo</a>.
+						</p> -->
+						<iframe src="//player.vimeo.com/video/107415955" width="750" height="422" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+						<!-- <p>
+							<a href="http://vimeo.com/107415955">New England Video Essay part 2</a> from <a href="http://vimeo.com/davevuono">Dave Vuono</a> on <a href="https://vimeo.com">Vimeo</a>.
+						</p> -->
 					</div>
 				</div>
 				<div id="tab-services">
