--- a/site/index.html
+++ b/site/index.html
@@ -49,7 +49,7 @@
 					<!-- intentionally blank -->
 				</div>
 				<div id="tab-photography">
-					<img class="tab-background" src="http://upload.wikimedia.org/wikipedia/commons/9/93/Astrophyton_muriatum_-_Basket_star.jpg" />
+					<img class="tab-background" src="images/castleton_tower_full_page.jpg" />
 					<div class="tab-content-left">
 						<h3>Photography</h3> 
 						<hr />
@@ -57,8 +57,8 @@
 					</div>
 				</div>
 				<div id="tab-motion">
-					<img class="tab-background" src="http://cdni.wired.co.uk/1920x1280/s_v/sea-slug.jpg" />
-					<div class="tab-content-right" style="width: 765px;">
+					<img class="tab-background" src="images/matt_zabba_full.jpg" />
+					<div class="tab-content-left" style="width: 765px;">
 						<h3>Motion</h3>
 						<hr />
 						<!-- <p>
@@ -75,6 +75,7 @@
 					</div>
 				</div>
 				<div id="tab-services">
+					<img class="tab-background" src="images/lake_champlain_full.jpg" />
 					<div class="tab-content-left">
 						<h3>Services</h3>
 						<hr />
@@ -82,6 +83,7 @@
 					</div>
 				</div>
 				<div id="tab-links">
+					<img class="tab-background" src="images/kev_mallorca_full.jpg" />
 					<div class="tab-content-right">
 						<h3>Links</h3>
 						<hr />
@@ -118,6 +120,7 @@
 					</div>
 				</div>
 				<div id="tab-products">
+					<img class="tab-background" src="images/Lee_thunder_ridge.jpg" />
 					<div class="tab-content-left">
 						<h3>Products</h3>
 						<hr />
@@ -130,7 +133,7 @@
 			 		</div>
 				</div>
 				<div id="tab-info">
-					<img class="tab-background" src="http://dive.nl/files/images/Dahab%20(7).2560*1600.jpg" />
+					<img class="tab-background" src="images/photo_montage_full.jpg" />
 					<div class="tab-content-right" style="width: 900px;">
 						<h3>Info</h3>
 						<hr />
@@ -166,6 +169,7 @@
 	<!--<script type="text/javascript" src="js/lightbox.js"></script> -->
 	<script src="//code.jquery.com/jquery-1.10.2.js" type="text/javascript"></script>
     <script src="//code.jquery.com/ui/1.11.1/jquery-ui.js" type="text/javascript"></script>
+    <script src="js/settings.js" type="text/javascript"></script>
     <script src="js/site.js" type="text/javascript"></script>
 </body> 
 </html>
