photo adjustments; small changes

--- a/site/index.html
+++ b/site/index.html
@@ -3,7 +3,7 @@
 <head> 
 	<meta name="keywords" content="Vermont, Colorado, Wyoming, Utah, New England, Outdoor photography, Rock Climbing, Trad CLimbing, Sport Climbing, Bouldering, Rock CLimbing Photography, Adventure Photography, Ice Climbing, Mixed Climbing, Backcountry Skiing. "> 
 	<meta name="description" content="Colorado-based adventure and action sport photography.">
-	<meta name="title" content="Dave Vuono Photography" />
+	<meta name="title" content="Dave Vuono" />
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" /> 
 	<!-- <meta name="verify-v1" content="JRQu6rRPALfGHKo/yIbvqVIMGSBMdGbZQcm5DG1vSts=" />  --> 
  	
@@ -15,7 +15,7 @@
 	<div id="content" class="fixed-container">
 		<div class="header">
 			<a class="header-title" href=".">
-				<span>Dave Vuono Photography</span>
+				<span>Dave Vuono</span>
 			</a>
 			<ul id="nav-menu">
 				<li style="display:none;">
@@ -56,9 +56,10 @@
 						<p>Stuff about photography</p>
 					</div>
 				</div>
-				<div id="tab-motion">
-					<img class="tab-background" src="images/matt_zabba_full.jpg" />
-					<div class="tab-content-left" style="width: 765px;">
+				<div id="tab-motion" class="full-size-child">
+					<!-- no background image for this tab -->
+					<!-- <img class="tab-background" src="images/matt_zabba_full.jpg" /> -->
+					<div class="tab-content-center centered" style="width: 765px;">
 						<h3>Motion</h3>
 						<hr />
 						<!-- <p>
@@ -73,9 +74,10 @@
 							<a href="http://vimeo.com/107415955">New England Video Essay part 2</a> from <a href="http://vimeo.com/davevuono">Dave Vuono</a> on <a href="https://vimeo.com">Vimeo</a>.
 						</p> -->
 					</div>
+					<div class="clearfix"></div>
 				</div>
 				<div id="tab-services">
-					<img class="tab-background" src="images/lake_champlain_full.jpg" />
+					<img class="tab-background" src="images/castleton_tower_full_page.jpg" />
 					<div class="tab-content-left">
 						<h3>Services</h3>
 						<hr />
@@ -158,7 +160,7 @@
 				copyright &copy; 2014   
 			</span> 
 			<span style="float:left;">
-				Dave Vuono Photography | Golden, CO | 203-536-8529 | <a href="mailto:info@davevuono.com?subject=website inquiry">email</a>
+				Dave Vuono | Golden, CO | 203-536-8529 | <a href="mailto:info@davevuono.com?subject=website inquiry">email</a>
 			</span>
 		</div>
 	</div>
