added social media icons; minimum sizes

--- a/site/index.html
+++ b/site/index.html
@@ -158,10 +158,21 @@
 		<div class="footer">
 			<span id="copyright-notice" style="float:right;">
 				copyright &copy; 2014   
-			</span> 
+			</span>
 			<span style="float:left;">
 				Dave Vuono | Golden, CO | 203-536-8529 | <a href="mailto:info@davevuono.com?subject=website inquiry">email</a>
 			</span>
+			<div class="centered" style="width: 80px; position: absolute;">
+				<a href="https://www.facebook.com/pages/Dave-Vuono-Photography/355577464580985" target="_blank">
+					<img class="footer-icon" src="images/FB-f-Logo__blue_29.png" />	
+				</a>
+				<a href="http://vimeo.com/davevuono" target="_blank">
+					<img class="footer-icon" src="images/vimeo_icon_white_on_blue_rounded.png" />
+				</a>
+				<a href="http://instagram.com/vuonophoto" target="_blank">
+					<img class="footer-icon" src="images/instagram-logo.png" />
+				</a>
+			</div>
 		</div>
 	</div>
 	
