photgraphy and motion tab expanded and reworked html

--- a/site/index.html
+++ b/site/index.html
@@ -42,24 +42,41 @@
 			</ul>
 			<div style="clear: both;"></div>
 		</div>
+		<!-- Slightly inset "main content" -->
 		<div class="center-content-wrapper">
+			<!-- This is the constantly changing gallery background image -->
 			<img id="content-gallery-image" />
 			<div id="tab-content-wrapper">
 				<div id="tab-gallery" style="height: 0px; width: 0px; padding: 0;">
 					<!-- intentionally blank -->
 				</div>
 				<div id="tab-photography">
-					<img class="tab-background" src="images/castleton_tower_full_page.jpg" />
-					<div class="tab-content-left">
-						<h3>Photography</h3> 
-						<hr />
-						<p>Stuff about photography</p>
+					<!-- <img class="tab-background" src="images/castleton_tower_full_page.jpg" /> -->
+					<div class="tab-content-full">
+						<!-- <h3>Photography</h3>
+						<hr /> -->
+						<div id="photography-tabs">
+							<ul>
+								<li>
+									<a href="#photography-tab-sun">Sun</a>	
+								</li>
+								<li>
+									<a href="#photography-tab-scenic">Scenic</a>	
+								</li>
+							</ul>
+							<div id="photography-tab-sun">
+								SUN!
+							</div>
+							<div id="photography-tab-scenic">
+								SCENIC!
+							</div>
+						</div>
 					</div>
 				</div>
-				<div id="tab-motion" class="full-size-child">
+				<div id="tab-motion">
 					<!-- no background image for this tab -->
 					<!-- <img class="tab-background" src="images/matt_zabba_full.jpg" /> -->
-					<div class="tab-content-center centered" style="width: 765px;">
+					<div class="tab-content-full">
 						<h3>Motion</h3>
 						<hr />
 						<!-- <p>
