--- a/site/index.html
+++ b/site/index.html
@@ -9,7 +9,9 @@
  	
 	<!-- Styles -->
 	<!-- <link rel="stylesheet" href="/css/lightbox.css" type="text/css" media="screen"></link>  -->
-	<link href="css/site.css" rel="stylesheet" type="text/css"></link> 		
+	<link href="css/site.css" rel="stylesheet" type="text/css"></link>
+	<!-- see http://kenwheeler.github.io/slick/ -->
+	<link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/jquery.slick/1.3.15/slick.css"/>		
 </head> 
 <body> 
 	<div id="content" class="fixed-container">
@@ -52,7 +54,7 @@
 				</div>
 				<div id="tab-photography">
 					<!-- <img class="tab-background" src="images/castleton_tower_full_page.jpg" /> -->
-					<div class="tab-content-full">
+					<div class="tab-content-full tab-content-bordered">
 						<!-- <h3>Photography</h3>
 						<hr /> -->
 						<div id="photography-tabs">
@@ -64,8 +66,15 @@
 									<a href="#photography-tab-scenic">Scenic</a>	
 								</li>
 							</ul>
-							<div id="photography-tab-sun">
-								SUN!
+							<div id="photography-tab-sun" style="position: relative;">
+								<div class="slick-container">
+									<div style="width: 10px;">
+										<image src="/images/scenic/cathedral_spires.jpg" />
+									</div>
+									<div style="width: 10px;">
+										<image src="/images/scenic/charlotte_sunset.jpg" />
+									</div>
+								</div>
 							</div>
 							<div id="photography-tab-scenic">
 								SCENIC!
@@ -76,7 +85,7 @@
 				<div id="tab-motion">
 					<!-- no background image for this tab -->
 					<!-- <img class="tab-background" src="images/matt_zabba_full.jpg" /> -->
-					<div class="tab-content-full">
+					<div class="tab-content-full tab-content-bordered">
 						<h3>Motion</h3>
 						<hr />
 						<!-- <p>
@@ -116,7 +125,7 @@
 							<a href="http://www.petracliffs.com">Petra Cliffs Climbing Center</a>
 						</p>
 						<p class="inset">
-							Thank god we have a place to train in the winter!  The hub of Vermont's Climbing community.
+							Thank god we have a place to train in the winter! The hub of Vermont's Climbing community.
 						</p>
 						<p>
 							<a href="http://www.katyshandjam.com/index.html">Katy's Hand Jam</a>
@@ -201,5 +210,6 @@
     <script src="//code.jquery.com/ui/1.11.1/jquery-ui.js" type="text/javascript"></script>
     <script src="js/settings.js" type="text/javascript"></script>
     <script src="js/site.js" type="text/javascript"></script>
+    <script type="text/javascript" src="//cdn.jsdelivr.net/jquery.slick/1.3.15/slick.min.js"></script>
 </body> 
 </html>
