slick carousel working basically now

--- a/site/index.html
+++ b/site/index.html
@@ -57,8 +57,8 @@
 					<div class="tab-content-full tab-content-bordered">
 						<!-- <h3>Photography</h3>
 						<hr /> -->
-						<div id="photography-tabs">
-							<ul>
+						<div id="photography-tabs" style="position: relative;">
+							<ul id="photography-menu">
 								<li>
 									<a href="#photography-tab-sun">Sun</a>	
 								</li>
@@ -66,13 +66,33 @@
 									<a href="#photography-tab-scenic">Scenic</a>	
 								</li>
 							</ul>
-							<div id="photography-tab-sun" style="position: relative;">
+							<!-- need to clearfix right here - todo -->
+							<div class="clearfix"></div>
+							<div id="photography-tab-sun">
 								<div class="slick-container">
-									<div style="width: 10px;">
-										<image src="/images/scenic/cathedral_spires.jpg" />
+									<div>
+										<img src="/images/scenic/cathedral_spires.jpg" />
 									</div>
-									<div style="width: 10px;">
-										<image src="/images/scenic/charlotte_sunset.jpg" />
+									<div>
+										<img src="/images/scenic/charlotte_sunset.jpg" />
+									</div>
+									<div>
+										<img src="/images/scenic/hump_sunset.jpg" />
+									</div>
+									<div>
+										<img src="/images/scenic/marshfield3.jpg" />
+									</div>
+									<div>
+										<img src="/images/scenic/morning_on_mansfield.jpg" />
+									</div>
+									<div>
+										<img src="/images/scenic/pleasant_valley.jpg" />
+									</div>
+									<div>
+										<img src="/images/scenic/sweden.jpg" />
+									</div>
+									<div>
+										<img src="/images/scenic/vineyard.jpg" />
 									</div>
 								</div>
 							</div>
