--- a/site/index.html
+++ b/site/index.html
@@ -11,7 +11,7 @@
 	<!-- <link rel="stylesheet" href="/css/lightbox.css" type="text/css" media="screen"></link>  -->
 	<link href="css/site.css" rel="stylesheet" type="text/css"></link>
 	<!-- see http://kenwheeler.github.io/slick/ -->
-	<link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/jquery.slick/1.3.15/slick.css"/>		
+	<!-- <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/jquery.slick/1.3.15/slick.css"/> -->		
 </head> 
 <body> 
 	<div id="content" class="fixed-container">
@@ -60,7 +60,7 @@
 						<div id="photography-tabs" style="position: relative;">
 							<ul id="photography-menu">
 								<li>
-									<a href="#photography-tab-sun">Sun</a>	
+									<a href="#photography-tab-action">Action</a>	
 								</li>
 								<li>
 									<a href="#photography-tab-scenic">Scenic</a>	
@@ -68,36 +68,36 @@
 							</ul>
 							<!-- need to clearfix right here - todo -->
 							<div class="clearfix"></div>
-							<div id="photography-tab-sun">
-								<div class="slick-container">
-									<div>
-										<img src="/images/scenic/cathedral_spires.jpg" />
-									</div>
-									<div>
-										<img src="/images/scenic/charlotte_sunset.jpg" />
-									</div>
-									<div>
-										<img src="/images/scenic/hump_sunset.jpg" />
-									</div>
-									<div>
-										<img src="/images/scenic/marshfield3.jpg" />
-									</div>
-									<div>
-										<img src="/images/scenic/morning_on_mansfield.jpg" />
-									</div>
-									<div>
-										<img src="/images/scenic/pleasant_valley.jpg" />
-									</div>
-									<div>
-										<img src="/images/scenic/sweden.jpg" />
-									</div>
-									<div>
-										<img src="/images/scenic/vineyard.jpg" />
-									</div>
-								</div>
+							<div id="photography-tab-action">
+								Action
 							</div>
 							<div id="photography-tab-scenic">
-								SCENIC!
+								<div class="image-gallery">
+									<a href="/images/scenic/cathedral_spires.jpg" data-lightbox="scenic-set">
+										<img src="/images/scenic/cathedral_spires.jpg" />
+									</a>
+									<a href="/images/scenic/charlotte_sunset.jpg" data-lightbox="scenic-set">
+										<img src="/images/scenic/charlotte_sunset.jpg" />
+									</a>
+									<a href="/images/scenic/hump_sunset.jpg" data-lightbox="scenic-set">
+										<img src="/images/scenic/hump_sunset.jpg" />
+									</a>
+									<a href="/images/scenic/marshfield3.jpg" data-lightbox="scenic-set">
+										<img src="/images/scenic/marshfield3.jpg" />
+									</a>
+									<a href="/images/scenic/morning_on_mansfield.jpg" data-lightbox="scenic-set">
+										<img src="/images/scenic/morning_on_mansfield.jpg" />
+									</a>
+									<a href="/images/scenic/pleasant_valley.jpg" data-lightbox="scenic-set">
+										<img src="/images/scenic/pleasant_valley.jpg" />
+									</a>
+									<a href="/images/scenic/sweden.jpg" data-lightbox="scenic-set">
+										<img src="/images/scenic/sweden.jpg" />
+									</a>
+									<a href="/images/scenic/vineyard.jpg" data-lightbox="scenic-set">
+										<img src="/images/scenic/vineyard.jpg" />
+									</a>
+								</div>
 							</div>
 						</div>
 					</div>
@@ -230,6 +230,6 @@
     <script src="//code.jquery.com/ui/1.11.1/jquery-ui.js" type="text/javascript"></script>
     <script src="js/settings.js" type="text/javascript"></script>
     <script src="js/site.js" type="text/javascript"></script>
-    <script type="text/javascript" src="//cdn.jsdelivr.net/jquery.slick/1.3.15/slick.min.js"></script>
+    <!--<script type="text/javascript" src="//cdn.jsdelivr.net/jquery.slick/1.3.15/slick.min.js"></script>-->
 </body> 
 </html>
