--- a/site/index.html
+++ b/site/index.html
@@ -8,8 +8,8 @@
 	<!-- <meta name="verify-v1" content="JRQu6rRPALfGHKo/yIbvqVIMGSBMdGbZQcm5DG1vSts=" />  --> 
  	
 	<!-- Styles -->
-	<!-- <link rel="stylesheet" href="/css/lightbox.css" type="text/css" media="screen"></link>  -->
 	<link href="css/site.css" rel="stylesheet" type="text/css"></link>
+	<link rel="stylesheet" href="/css/lightbox.css" type="text/css" media="screen"></link> 
 	<!-- see http://kenwheeler.github.io/slick/ -->
 	<!-- <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/jquery.slick/1.3.15/slick.css"/> -->		
 </head> 
@@ -225,11 +225,12 @@
 	<!-- scripts are here for best practice -->
 	<!--<script type="text/javascript" src="js/prototype.js"></script>-->
 	<!--<script type="text/javascript" src="js/scriptaculous.js?load=effects"></script>-->
-	<!--<script type="text/javascript" src="js/lightbox.js"></script> -->
+	
 	<script src="//code.jquery.com/jquery-1.10.2.js" type="text/javascript"></script>
     <script src="//code.jquery.com/ui/1.11.1/jquery-ui.js" type="text/javascript"></script>
     <script src="js/settings.js" type="text/javascript"></script>
     <script src="js/site.js" type="text/javascript"></script>
+    <script type="text/javascript" src="js/lightbox.js"></script> 
     <!--<script type="text/javascript" src="//cdn.jsdelivr.net/jquery.slick/1.3.15/slick.min.js"></script>-->
 </body> 
 </html>
