--- a/site/index.html
+++ b/site/index.html
@@ -9,7 +9,8 @@
  	
 	<!-- Styles -->
 	<link href="css/site.css" rel="stylesheet" type="text/css"></link>
-	<link rel="stylesheet" href="/css/lightbox.css" type="text/css" media="screen"></link> 
+	<!-- <link rel="stylesheet" href="/css/lightbox.css" type="text/css" media="screen"></link>  -->
+	<link href="//cdn.rawgit.com/noelboss/featherlight/1.2.0/release/featherlight.min.css" type="text/css" rel="stylesheet" title="Featherlight Styles" />
 	<!-- see http://kenwheeler.github.io/slick/ -->
 	<!-- <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/jquery.slick/1.3.15/slick.css"/> -->		
 </head> 
@@ -73,13 +74,17 @@
 							</div>
 							<div id="photography-tab-scenic">
 								<div class="image-gallery">
-									<a href="/images/scenic/cathedral_spires.jpg" data-lightbox="scenic-set">
+									<a href="/images/scenic/cathedral_spires.jpg" data-lightbox="scenic-set"
+										data-featherlight="/images/scenic/cathedral_spires.jpg">
 										<img src="/images/scenic/cathedral_spires.jpg" />
 									</a>
+									<!-- <div id="cathedralspires">
+										<img src="/images/scenic/cathedral_spires.jpg" />
+									</div>
 									<a href="/images/scenic/charlotte_sunset.jpg" data-lightbox="scenic-set">
 										<img src="/images/scenic/charlotte_sunset.jpg" />
-									</a>
-									<a href="/images/scenic/hump_sunset.jpg" data-lightbox="scenic-set">
+									</a> -->
+									<!-- <a href="/images/scenic/hump_sunset.jpg" data-lightbox="scenic-set">
 										<img src="/images/scenic/hump_sunset.jpg" />
 									</a>
 									<a href="/images/scenic/marshfield3.jpg" data-lightbox="scenic-set">
@@ -96,7 +101,7 @@
 									</a>
 									<a href="/images/scenic/vineyard.jpg" data-lightbox="scenic-set">
 										<img src="/images/scenic/vineyard.jpg" />
-									</a>
+									</a> -->
 								</div>
 							</div>
 						</div>
@@ -228,9 +233,11 @@
 	
 	<script src="//code.jquery.com/jquery-1.10.2.js" type="text/javascript"></script>
     <script src="//code.jquery.com/ui/1.11.1/jquery-ui.js" type="text/javascript"></script>
-    <script src="js/settings.js" type="text/javascript"></script>
+    
+    <script src="//cdn.rawgit.com/noelboss/featherlight/1.2.0/release/featherlight.min.js" type="text/javascript" charset="utf-8"></script>
+    <!--<script type="text/javascript" src="js/lightbox.js"></script> -->
+	<script src="js/settings.js" type="text/javascript"></script>
     <script src="js/site.js" type="text/javascript"></script>
-    <script type="text/javascript" src="js/lightbox.js"></script> 
     <!--<script type="text/javascript" src="//cdn.jsdelivr.net/jquery.slick/1.3.15/slick.min.js"></script>-->
 </body> 
 </html>
