--- a/site/test.html
+++ b/site/test.html
@@ -7,9 +7,10 @@
 	<!-- <meta name="verify-v1" content="JRQu6rRPALfGHKo/yIbvqVIMGSBMdGbZQcm5DG1vSts=" />  --> 
  	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" /> 
 </head> 
-<body style="height: 100%; background: #000; margin: 0;"> 
-	<div style="height: 40px; background: green;"></div>
+<body style="height: 100%; width: 100%; background: #000; margin: 0;  padding: 0;"> 
+	<div style="margin: 10px; background: #333; width: 100%; height: 100%;"></div>
+	<!-- <div style="height: 40px; background: green;"></div>
 	<div style="height: 80%; background: red;"></div>
-	<div style="height: 40px; background: blue;"></div>
+	<div style="height: 40px; background: blue;"></div> -->
 </body> 
 </html>
