--- a/site/index.html
+++ b/site/index.html
@@ -59,8 +59,21 @@
 						<!-- <h3>Photography</h3>
 						<hr /> -->
 						<div id="photography-tabs" style="position: relative;">
+							<table style="width: 100%;border:2px solid black;">
+								<tbody>
+									<tr>
+										<td style="width: 50%;text-align:right;background-color:white;color: black;">
+											Action
+										</td>
+										<td style="width: 50%;background-color: black; color: white;">
+											Scenic
+										</td>
+									</tr>
+								</tbody>
+							</table>
+							<hr />
 							<ul id="photography-menu">
-								<li>
+								<li style="text-align: right;">
 									<a href="#photography-tab-action">Action</a>	
 								</li>
 								<li>
@@ -78,6 +91,9 @@
 										data-featherlight="/images/scenic/cathedral_spires.jpg">
 										<img src="/images/scenic/cathedral_spires.jpg" />
 									</a>
+									<!-- <a class="fancybox" rel="group" href="/images/scenic/cathedral_spires.jpg">
+										<img src="/images/scenic/cathedral_spires.jpg" alt="" />
+									</a> -->
 									<!-- <div id="cathedralspires">
 										<img src="/images/scenic/cathedral_spires.jpg" />
 									</div>
