--- a/site/index.html
+++ b/site/index.html
@@ -9,7 +9,7 @@
  	
 	<!-- Styles -->
 	<link href="css/site.css" rel="stylesheet" type="text/css"></link>
-    <link rel="stylesheet" href="fancybox/source/jquery.fancybox.css?v=2.1.5" type="text/css" media="screen" />
+    <link rel="stylesheet" href="fancyBox/source/jquery.fancybox.css?v=2.1.5" type="text/css" media="screen" />
 </head> 
 <body> 
 	<div id="content" class="fixed-container">
@@ -353,7 +353,7 @@
 	<script src="//code.jquery.com/jquery-1.10.2.js" type="text/javascript"></script>
     <script src="//code.jquery.com/ui/1.11.1/jquery-ui.js" type="text/javascript"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery-mousewheel/3.0.6/jquery.mousewheel.min.js"></script>
-    <script type="text/javascript" src="fancybox/source/jquery.fancybox.pack.js?v=2.1.5"></script>
+    <script type="text/javascript" src="fancyBox/source/jquery.fancybox.pack.js?v=2.1.5"></script>
 	<script src="js/settings.js" type="text/javascript"></script>
     <script src="js/site.js" type="text/javascript"></script>
 </body> 
