removing placeholder image url and just using background color instead

--- a/site/index.html
+++ b/site/index.html
@@ -70,164 +70,164 @@
                                     <a class="fancybox" rel="action"
                                        href="images/action/anni_dynosaur3.jpg"
                                        title="test thumb 1">
-                                        <img src="http://dummyimage.com/300x425.png/292929/e3e3e3&text=%20" data-src="images/action/anni_dynosaur3.jpg" alt="anni_dynosaur3" />
+                                        <img data-src="images/action/anni_dynosaur3___.jpg" alt="anni_dynosaur3" />
                                     </a>
                                     <a class="fancybox" rel="action"
                                        href="images/action/chinaglide2.jpg"
                                        title="test thumb 1">
-                                        <img src="http://dummyimage.com/300x425.png/292929/e3e3e3&text=%20" data-src="images/action/chinaglide2.jpg" alt="" />
+                                        <img data-src="images/action/chinaglide2.jpg" alt="" />
                                     </a>
                                     <a class="fancybox" rel="action"
                                        href="images/action/courtney_spooks.jpg"
                                        title="test thumb 1">
-                                        <img src="http://dummyimage.com/300x425.png/292929/e3e3e3&text=%20" class="wide" data-src="images/action/courtney_spooks.jpg" alt="" />
+                                        <img class="wide" data-src="images/action/courtney_spooks.jpg" alt="" />
                                     </a>
                                     <a class="fancybox" rel="action"
                                        href="images/action/daks_fecalator.jpg"
                                        title="test thumb 1">
-                                        <img src="http://dummyimage.com/300x425.png/292929/e3e3e3&text=%20" data-src="images/action/daks_fecalator.jpg" alt="" />
+                                        <img data-src="images/action/daks_fecalator.jpg" alt="" />
                                     </a>
                                     <a class="fancybox" rel="action"
                                        href="images/action/deep_water_soloing3.jpg"
                                        title="test thumb 1">
-                                        <img src="http://dummyimage.com/300x425.png/292929/e3e3e3&text=%20" class="wide" data-src="images/action/deep_water_soloing3.jpg" alt="" />
+                                        <img class="wide" data-src="images/action/deep_water_soloing3.jpg" alt="" />
                                     </a>
                                     <a class="fancybox" rel="action"
                                        href="images/action/ground_up.jpg"
                                        title="test thumb 1">
-                                        <img src="http://dummyimage.com/300x425.png/292929/e3e3e3&text=%20"  data-src="images/action/ground_up.jpg" alt="" />
+                                        <img data-src="images/action/ground_up.jpg" alt="" />
                                     </a>
                                     <a class="fancybox" rel="action"
                                        href="images/action/high_grade_direct_neil1.jpg"
                                        title="test thumb 1">
-                                        <img src="http://dummyimage.com/300x425.png/292929/e3e3e3&text=%20" data-src="images/action/high_grade_direct_neil1.jpg" alt="" />
+                                        <img data-src="images/action/high_grade_direct_neil1.jpg" alt="" />
                                     </a>
                                     <a class="fancybox" rel="action"
                                        href="images/action/high_grade_matt1.jpg"
                                        title="test thumb 1">
-                                        <img src="http://dummyimage.com/300x425.png/292929/e3e3e3&text=%20" data-src="images/action/high_grade_matt1.jpg" alt="" />
+                                        <img data-src="images/action/high_grade_matt1.jpg" alt="" />
                                     </a>
                                     <a class="fancybox" rel="action"
                                        href="images/action/hot_seat_in_hell1.jpg"
                                        title="test thumb 1">
-                                        <img src="http://dummyimage.com/300x425.png/292929/e3e3e3&text=%20" class="wide" data-src="images/action/hot_seat_in_hell1.jpg" alt="" />
+                                        <img class="wide" data-src="images/action/hot_seat_in_hell1.jpg" alt="" />
                                     </a>
                                     <a class="fancybox" rel="action"
                                        href="images/action/jeremy_snake.jpg"
                                        title="test thumb 1">
-                                        <img src="http://dummyimage.com/300x425.png/292929/e3e3e3&text=%20" data-src="images/action/jeremy_snake.jpg" alt="" />
+                                        <img data-src="images/action/jeremy_snake.jpg" alt="" />
                                     </a>
                                     <a class="fancybox" rel="action"
                                        href="images/action/kevin_carcass.jpg"
                                        title="test thumb 1">
-                                        <img src="http://dummyimage.com/300x425.png/292929/e3e3e3&text=%20" data-src="images/action/kevin_carcass.jpg" alt="" />
+                                        <img data-src="images/action/kevin_carcass.jpg" alt="" />
                                     </a>
                                     <a class="fancybox" rel="action"
                                        href="images/action/lindsay_pineo.jpg"
                                        title="test thumb 1">
-                                        <img src="http://dummyimage.com/300x425.png/292929/e3e3e3&text=%20" class="wide" data-src="images/action/lindsay_pineo.jpg" alt="" />
+                                        <img class="wide" data-src="images/action/lindsay_pineo.jpg" alt="" />
                                     </a>
                                     <a class="fancybox" rel="action"
                                        href="images/action/peter_moss2.jpg"
                                        title="test thumb 1">
-                                        <img src="http://dummyimage.com/300x425.png/292929/e3e3e3&text=%20" data-src="images/action/peter_moss2.jpg" alt="" />
+                                        <img data-src="images/action/peter_moss2.jpg" alt="" />
                                     </a>
                                     <a class="fancybox" rel="action"
                                        href="images/action/peter_moss5.jpg"
                                        title="test thumb 1">
-                                        <img src="http://dummyimage.com/300x425.png/292929/e3e3e3&text=%20" data-src="images/action/peter_moss5.jpg" alt="" />
+                                        <img data-src="images/action/peter_moss5.jpg" alt="" />
                                     </a>
                                     <a class="fancybox" rel="action"
                                        href="images/action/peter_synesthetic_progression_main.jpg"
                                        title="test thumb 1">
-                                        <img src="http://dummyimage.com/300x425.png/292929/e3e3e3&text=%20" class="wide" data-src="images/action/peter_synesthetic_progression_main.jpg" alt="" />
+                                        <img class="wide" data-src="images/action/peter_synesthetic_progression_main.jpg" alt="" />
                                     </a>
                                     <a class="fancybox" rel="action"
                                        href="images/action/pure_gold3.jpg"
                                        title="test thumb 1">
-                                        <img src="http://dummyimage.com/300x425.png/292929/e3e3e3&text=%20" data-src="images/action/pure_gold3.jpg" alt="" />
+                                        <img data-src="images/action/pure_gold3.jpg" alt="" />
                                     </a>
                                     <a class="fancybox" rel="action"
                                        href="images/action/rory_hardway.jpg"
                                        title="test thumb 1">
-                                        <img src="http://dummyimage.com/300x425.png/292929/e3e3e3&text=%20" data-src="images/action/rory_hardway.jpg" alt="" />
+                                        <img data-src="images/action/rory_hardway.jpg" alt="" />
                                     </a>
                                     <a class="fancybox" rel="action"
                                        href="images/action/rowdey_entertainment1.jpg"
                                        title="test thumb 1">
-                                        <img src="http://dummyimage.com/300x425.png/292929/e3e3e3&text=%20" class="wide" data-src="images/action/rowdey_entertainment1.jpg" alt="" />
+                                        <img class="wide" data-src="images/action/rowdey_entertainment1.jpg" alt="" />
                                     </a>
                                     <a class="fancybox" rel="action"
                                        href="images/action/the_hard_way_peter.jpg"
                                        title="test thumb 1">
-                                        <img src="http://dummyimage.com/300x425.png/292929/e3e3e3&text=%20" data-src="images/action/the_hard_way_peter.jpg" alt="" />
+                                        <img data-src="images/action/the_hard_way_peter.jpg" alt="" />
                                     </a>
                                     <a class="fancybox" rel="action"
                                        href="images/action/the_hard_way_vasya.jpg"
                                        title="test thumb 1">
-                                        <img src="http://dummyimage.com/300x425.png/292929/e3e3e3&text=%20" data-src="images/action/the_hard_way_vasya.jpg" alt="" />
+                                        <img data-src="images/action/the_hard_way_vasya.jpg" alt="" />
                                     </a>
                                     <a class="fancybox" rel="action"
                                        href="images/action/trav_ent1.jpg"
                                        title="test thumb 1">
-                                        <img src="http://dummyimage.com/300x425.png/292929/e3e3e3&text=%20" data-src="images/action/trav_ent1.jpg" alt="" />
+                                        <img data-src="images/action/trav_ent1.jpg" alt="" />
                                     </a>
                                     <a class="fancybox" rel="action"
                                        href="images/action/trav_ganesh1.jpg"
                                        title="test thumb 1">
-                                        <img src="http://dummyimage.com/300x425.png/292929/e3e3e3&text=%20" data-src="images/action/trav_ganesh1.jpg" alt="" />
+                                        <img data-src="images/action/trav_ganesh1.jpg" alt="" />
                                     </a>
                                     <a class="fancybox" rel="action"
                                        href="images/action/webber_dihedral1.jpg"
                                        title="test thumb 1">
-                                        <img src="http://dummyimage.com/300x425.png/292929/e3e3e3&text=%20" class="wide" data-src="images/action/webber_dihedral1.jpg" alt="" />
+                                        <img class="wide" data-src="images/action/webber_dihedral1.jpg" alt="" />
                                     </a>
                                     <a class="fancybox" rel="action"
                                        href="images/action/zabba_mccormick.jpg"
                                        title="test thumb 1">
-                                        <img src="http://dummyimage.com/300x425.png/292929/e3e3e3&text=%20" class="wide" data-src="images/action/zabba_mccormick.jpg" alt="" />
+                                        <img class="wide" data-src="images/action/zabba_mccormick.jpg" alt="" />
                                     </a>
                                 </div>
                                 <div id="photography-tab-scenic" class="image-gallery">
                                     <a class="fancybox" rel="scenic"
                                        href="images/scenic/cathedral_spires.jpg"
                                        title="test thumb 1">
-                                        <img src="http://dummyimage.com/300x425.png/292929/e3e3e3&text=%20" class="wide" data-src="images/scenic/cathedral_spires.jpg" alt="" />
+                                        <img class="wide" data-src="images/scenic/cathedral_spires.jpg" alt="" />
                                     </a>
                                     <a class="fancybox" rel="scenic"
                                        href="images/scenic/charlotte_sunset.jpg"
                                        title="thumbnail text">
-                                        <img src="http://dummyimage.com/300x425.png/292929/e3e3e3&text=%20" class="wide" data-src="images/scenic/charlotte_sunset.jpg" alt="" />
+                                        <img class="wide" data-src="images/scenic/charlotte_sunset.jpg" alt="" />
                                     </a>
                                     <a class="fancybox" rel="scenic"
                                        href="images/scenic/hump_sunset.jpg"
                                        title="thumbnail text">
-                                        <img src="http://dummyimage.com/300x425.png/292929/e3e3e3&text=%20" class="wide" data-src="images/scenic/hump_sunset.jpg" alt="" />
+                                        <img class="wide" data-src="images/scenic/hump_sunset.jpg" alt="" />
                                     </a>
                                     <a class="fancybox" rel="scenic"
                                        href="images/scenic/marshfield3.jpg"
                                        title="thumbnail text">
-                                        <img src="http://dummyimage.com/300x425.png/292929/e3e3e3&text=%20" class="wide" data-src="images/scenic/marshfield3.jpg" alt="" />
+                                        <img class="wide" data-src="images/scenic/marshfield3.jpg" alt="" />
                                     </a>
                                     <a class="fancybox" rel="scenic"
                                        href="images/scenic/morning_on_mansfield.jpg"
                                        title="thumbnail text">
-                                        <img src="http://dummyimage.com/300x425.png/292929/e3e3e3&text=%20" class="wide" data-src="images/scenic/morning_on_mansfield.jpg" alt="" />
+                                        <img class="wide" data-src="images/scenic/morning_on_mansfield.jpg" alt="" />
                                     </a>
                                     <a class="fancybox" rel="scenic"
                                        href="images/scenic/pleasant_valley.jpg"
                                        title="thumbnail text">
-                                        <img src="http://dummyimage.com/300x425.png/292929/e3e3e3&text=%20" class="wide" data-src="images/scenic/pleasant_valley.jpg" alt="" />
+                                        <img class="wide" data-src="images/scenic/pleasant_valley.jpg" alt="" />
                                     </a>
                                     <a class="fancybox" rel="scenic"
                                        href="images/scenic/sweden.jpg"
                                        title="thumbnail text">
-                                        <img src="http://dummyimage.com/300x425.png/292929/e3e3e3&text=%20" class="wide" data-src="images/scenic/sweden.jpg" alt="" />
+                                        <img class="wide" data-src="images/scenic/sweden.jpg" alt="" />
                                     </a>
                                     <a class="fancybox" rel="scenic"
                                        href="images/scenic/vineyard.jpg"
                                        title="thumbnail text">
-                                        <img src="http://dummyimage.com/300x425.png/292929/e3e3e3&text=%20" class="wide" data-src="images/scenic/vineyard.jpg" alt="" />
+                                        <img class="wide" data-src="images/scenic/vineyard.jpg" alt="" />
                                     </a>
                                 </div>
                             </div>
